# RMLX

./: .cargo_errors.txt  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  fix-plan.md  production-readiness-audit.md
.github/workflows/: ci.yml
bench_results/: 20260308_224803_distributed_bench_baseline_node0.txt  20260308_224803_distributed_bench_tp2_rank0.txt  20260308_224803_distributed_bench_tp2_rank1.txt
benches/: pipeline_bench.rs
benchmarks/: mlx_comparison_bench.py  mlx_ep_bench.py  mlx_full_model_bench.py  mlx_fusion_bench.py  mlx_gather_mm_bench.py  mlx_gemm_fair_bench.py  mlx_gemm_heatmap_bench.py  mlx_gemm_per_m_bench.py  mlx_layer_bench.py  mlx_model_bench.py  mlx_prefill_bench.py  mlx_prefill_profile_bench.py  mlx_qmm_bench.py  mlx_qmm_pipeline_bench.py  mlx_quantized_bench.py  mlx_tp_bench.py  run_comparison.sh
benchmarks/mlx_vs_rmlx/: bench_mlx.py  bench_mlx_ep_layer.py  bench_mlx_tp_layer.py  (+3 more)
config/: devices_tb5.json
crates/rmlx-alloc/: Cargo.toml
crates/rmlx-alloc/src/: allocator.rs  bfc.rs  buffer_pool.rs  cache.rs  leak_detector.rs  lib.rs  residency.rs  small_alloc.rs  stats.rs  zero_copy.rs
crates/rmlx-alloc/tests/: alloc_tests.rs  leak_detector_tests.rs
crates/rmlx-cli/: Cargo.toml
crates/rmlx-cli/src/: config.rs  hostfile.rs  launch.rs  main.rs  ssh.rs  tb_discovery.rs  topology.rs
crates/rmlx-core/: Cargo.toml  build.rs
crates/rmlx-core/benches/: dispatch_overhead.rs  dispatch_overhead_bench.rs  dual_queue_bench.rs  fusion_bench.rs  gemm_bench.rs  gemm_fair_bench.rs  gemm_kernel_opt.rs  gemm_opt.rs  gemm_sweep.rs  gemm_sweep2.rs  kernel_heatmap_bench.rs  lowm_kernel_bench.rs  nax_gemm_bench.rs  nax_lowm_bench.rs  nax_tile_bench.rs  nax_transition_bench.rs  ops_bench.rs  qmm_dispatch_bench.rs  qmm_lowm_bench.rs  qmm_lowm_mlx_bench.rs  qmm_moe_bench.rs  qmm_nax_bench.rs  qmm_pipeline_bench.rs  qmv_vs_steelsk_bench.rs  quantized_bench.rs  residual_bench.rs  rust_opt_bench.rs  single_kernel_bench.rs  skinny_diagnostic_bench.rs  splitk_sweep_bench.rs
crates/rmlx-core/kernels/: vector_add.metal
crates/rmlx-core/src/: arena.rs  array.rs  dtype.rs  lazy.rs  lib.rs  logging.rs  lora.rs  metrics.rs  precision_guard.rs  prelude.rs  shutdown.rs  vjp.rs
crates/rmlx-core/src/formats/: gguf.rs  mod.rs
crates/rmlx-core/src/fusion/: analyzer.rs  codegen.rs  compiler.rs  graph.rs  mod.rs
crates/rmlx-core/src/kernels/: mod.rs
crates/rmlx-core/src/ops/: argreduce.rs  binary.rs  buffer_slots.rs  concat.rs  conv.rs  conv_tiled.rs  copy.rs  flash_attention.rs  fp8.rs  fused.rs  gather_mm.rs  gelu.rs  gemv.rs  indexing.rs  layer_norm.rs  matmul.rs  mod.rs  moe_kernels.rs  quantized.rs  random.rs  reduce.rs  rms_norm.rs  rope.rs  scan.rs  sdpa.rs  sdpa_backward.rs  select.rs  silu.rs  slice.rs  softmax.rs  sort.rs  topk_route.rs  unary.rs  vjp_gpu.rs
crates/rmlx-core/tests/: col_major_gemv_tests.rs  fused_kernel_tests.rs  interleaved_gemv_tests.rs  ops_tests.rs  phase7a_tests.rs  phase7b_tests.rs
crates/rmlx-distributed/: Cargo.toml
crates/rmlx-distributed/examples/: comprehensive_bench.rs  rdma_test.rs
crates/rmlx-distributed/src/: credit_manager.rs  ep_runtime.rs  fp8_exchange.rs  group.rs  health.rs  init.rs  lib.rs  metrics.rs  moe_exchange.rs  moe_kernels.rs  moe_policy.rs  perf_counters.rs  pipeline.rs  progress_tracker.rs  slab_ring.rs  sparse_guard.rs  transport.rs  v3_protocol.rs  warmup.rs
crates/rmlx-distributed/tests/: ep_rdma_integration.rs  g3_verification.rs  moe_tests.rs  phase7a_tests.rs  pipeline_tests.rs  rdma_2node_integration.rs  tp_2node_e2e.rs  tree_allreduce_tests.rs
crates/rmlx-metal/: Cargo.toml
crates/rmlx-metal/src/: autorelease.rs  batcher.rs  buffer.rs  capture.rs  command.rs  compute_pass.rs  device.rs  event.rs  exec_graph.rs  fence.rs  icb.rs  icb_sparse.rs  lib.rs  library.rs  library_cache.rs  managed_buffer.rs  msl_version.rs  pipeline.rs  pipeline_cache.rs  queue.rs  self_check.rs  stream.rs  types.rs
crates/rmlx-metal/src/metal4/: command.rs  compiler.rs  compute.rs  counter_heap.rs  mod.rs
crates/rmlx-metal/tests/: event_tests.rs  metal_compute.rs  self_check_tests.rs
crates/rmlx-nn/: Cargo.toml
crates/rmlx-nn/benches/: decode_7dispatch_trace_bench.rs  dispatch_gpu_time_bench.rs  distributed_bench.rs  e2e_prefill_bench.rs  ep_bench.rs  gemm_degradation_bench.rs  gpu_profile_bench.rs  matmul_micro_bench.rs  model_bench.rs  op_profile_bench.rs  pipeline_bench.rs  prefill_bench.rs
crates/rmlx-nn/src/: activations.rs  attention.rs  conv.rs  dynamic.rs  embedding.rs  expert_group.rs  gguf_loader.rs  layer_norm.rs  lib.rs  linear.rs  mla.rs  moe.rs  moe_pipeline.rs  paged_kv_cache.rs  parallel.rs  prefill_plan.rs  prefill_pool.rs  prefix_cache.rs  quantized_linear.rs  rms_norm.rs  rope.rs  safetensors_loader.rs  sampler.rs  scheduler.rs  sliding_window.rs  transformer.rs
crates/rmlx-nn/src/models/: deepseek.rs  llama.rs  mixtral.rs  mod.rs  qwen.rs
crates/rmlx-nn/tests/: e2e_generate.rs  nn_tests.rs
crates/rmlx-python/: Cargo.toml  pyproject.toml
crates/rmlx-python/src/: array_wrapper.rs  dtype_wrapper.rs  lib.rs
crates/rmlx-rdma/: Cargo.toml
crates/rmlx-rdma/examples/: qp_reuse_test.rs
crates/rmlx-rdma/src/: auto_setup.rs  collectives.rs  connection.rs  connection_manager.rs  context.rs  coordinator.rs  crc.rs  device_file.rs  exchange.rs  exchange_tag.rs  ffi.rs  gpu_doorbell.rs  lib.rs  mr.rs  mr_pool.rs  multi_port.rs  progress.rs  qp.rs  rdma_metrics.rs  shared_buffer.rs
crates/rmlx-rdma/tests/: multi_port_tests.rs  rdma_metrics_tests.rs  rdma_tests.rs
docs/: README.md  README_ko.md  SUMMARY.md  comparison.md  comparison_ko.md  gpu-pipeline.md  gpu-pipeline_ko.md
scripts/: mlx_e2e_prefill_bench.py  mlx_gemm_bench.py  mlx_matmul_micro.py  mlx_op_profile.py  mlx_per_op_bench.py  mlx_per_op_isolated.py  mlx_prefill_bench.py  rdma_setup.py  rmlx_distributed_config.py  rmlx_launch.py  run_distributed_bench.sh  run_full_comparison.sh  test_rdma_2node.sh  vendor_mlx_shaders.sh  verify_vendor.sh
tools/: check_runtime_wiring.sh  unsafe_audit.sh
(+62 files in other folders)
