[workspace]
resolver = "2"
members = [
    "crates/rmlx-metal",
    "crates/rmlx-alloc",
    "crates/rmlx-rdma",
    "crates/rmlx-core",
    "crates/rmlx-distributed",
    "crates/rmlx-nn",
    "crates/rmlx-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
metal = "0.31"
objc = "0.2"
block = "0.1"
libc = "0.2"
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
half = "2"
sha2 = "0.10"
dirs = "5"
tracing = "0.1"
smallvec = { version = "1", features = ["const_generics"] }
