[package]
name = "rmlx-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
## Enable Metal 3 residency set management (M3+ devices).
## Uses objc2-metal MTLResidencySet bindings.
metal3 = []
## Forward tracked_hazards to rmlx-metal so all allocator buffers use
## Metal's automatic hazard tracking instead of untracked mode.
tracked_hazards = ["rmlx-metal/tracked_hazards"]

[dependencies]
rmlx-metal = { path = "../rmlx-metal" }
libc = { workspace = true }
objc2 = { workspace = true }
objc2-metal = { workspace = true, features = ["MTLAllocation", "MTLResidencySet"] }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
