[package]
name = "rmlx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-metal = { path = "../rmlx-metal" }
rmlx-alloc = { path = "../rmlx-alloc" }
metal = { workspace = true }
tracing = { workspace = true }

[features]
## Forward tracked_hazards through to rmlx-metal.
tracked_hazards = ["rmlx-metal/tracked_hazards"]

[dev-dependencies]
half = { workspace = true }

[[bench]]
name = "ops_bench"
harness = false
