[package]
name = "rmlx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-metal = { path = "../rmlx-metal" }
rmlx-alloc = { path = "../rmlx-alloc" }
rmlx-macros = { path = "../rmlx-macros" }
objc2 = { workspace = true }
objc2-metal = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }

[features]
bench = []
## Forward tracked_hazards through to rmlx-metal.
tracked_hazards = ["rmlx-metal/tracked_hazards"]
## Forward metal4 through to rmlx-metal.
metal4 = ["rmlx-metal/metal4"]

[dev-dependencies]
half = { workspace = true }
objc2 = { workspace = true }

[[bench]]
name = "ops_bench"
harness = false

[[bench]]
name = "gemm_bench"
harness = false

[[bench]]
name = "gemm_sweep"
harness = false

[[bench]]
name = "gemm_sweep2"
harness = false

[[bench]]
name = "gemm_opt"
harness = false

[[bench]]
name = "gemm_kernel_opt"
harness = false

[[bench]]
name = "dispatch_overhead"
harness = false

[[bench]]
name = "residual_bench"
harness = false

[[bench]]
name = "quantized_bench"
harness = false

[[bench]]
name = "fusion_bench"
harness = false

[[bench]]
name = "qmm_moe_bench"
harness = false

[[bench]]
name = "qmm_lowm_bench"
harness = false

[[bench]]
name = "dual_queue_bench"
harness = false

[[bench]]
name = "qmm_dispatch_bench"
harness = false

[[bench]]
name = "nax_transition_bench"
harness = false

[[bench]]
name = "qmm_lowm_mlx_bench"
harness = false

[[bench]]
name = "qmv_vs_steelsk_bench"
harness = false

[[bench]]
name = "skinny_diagnostic_bench"
harness = false

[[bench]]
name = "rust_opt_bench"
harness = false

[[bench]]
name = "nax_gemm_bench"
harness = false

[[bench]]
name = "nax_tile_bench"
harness = false

[[bench]]
name = "qmm_nax_bench"
harness = false

[[bench]]
name = "nax_lowm_bench"
harness = false

[[bench]]
name = "dispatch_overhead_bench"
harness = false

[[bench]]
name = "single_kernel_bench"
harness = false

[[bench]]
name = "lowm_kernel_bench"
harness = false

[[bench]]
name = "gemm_fair_bench"
harness = false

[[bench]]
name = "kernel_heatmap_bench"
harness = false

[[bench]]
name = "splitk_sweep_bench"
harness = false
