[package]
name = "rmlx-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-alloc = { path = "../rmlx-alloc" }
rmlx-core = { path = "../rmlx-core" }
rmlx-metal = { path = "../rmlx-metal" }
rmlx-rdma = { path = "../rmlx-rdma" }
metal = { workspace = true }
