[package]
name = "rmlx-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-alloc = { path = "../rmlx-alloc" }
rmlx-core = { path = "../rmlx-core" }
rmlx-metal = { path = "../rmlx-metal" }
rmlx-rdma = { path = "../rmlx-rdma" }
objc2-metal = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rmlx-nn = { path = "../rmlx-nn" }
rmlx-rdma = { path = "../rmlx-rdma", features = ["test-utils"] }
