[package]
name = "rmlx-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
tracked_hazards = []

[dependencies]
metal = { workspace = true }
objc = { workspace = true }
block = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
