[package]
name = "rmlx-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
tracked_hazards = []

[dependencies]
objc2 = { workspace = true }
objc2-metal = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }
bytemuck = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
