[package]
name = "rmlx-nn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-core = { path = "../rmlx-core" }
rmlx-metal = { path = "../rmlx-metal" }
rmlx-distributed = { path = "../rmlx-distributed", optional = true }
metal = { workspace = true }

[features]
distributed = ["rmlx-distributed"]

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "prefill_bench"
harness = false
