[package]
name = "rmlx-nn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmlx-core = { path = "../rmlx-core" }
rmlx-metal = { path = "../rmlx-metal" }
rmlx-distributed = { path = "../rmlx-distributed", optional = true }
objc2 = { workspace = true }
objc2-metal = { workspace = true, features = ["objc2-core-foundation"] }
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[features]
bench = ["rmlx-core/bench"]
distributed = ["rmlx-distributed"]

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "prefill_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "distributed_bench"
harness = false

[[bench]]
name = "ep_bench"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "op_profile_bench"
harness = false

[[bench]]
name = "gemm_degradation_bench"
harness = false

[[bench]]
name = "gpu_profile_bench"
harness = false

[[bench]]
name = "matmul_micro_bench"
harness = false

[[bench]]
name = "dispatch_gpu_time_bench"
harness = false

[[bench]]
name = "decode_7dispatch_trace_bench"
harness = false

[[bench]]
name = "e2e_prefill_bench"
harness = false
required-features = ["bench"]
