[package]
name = "rmlx-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rmlx"
crate-type = ["cdylib"]

[dependencies]
rmlx-core = { path = "../rmlx-core" }
rmlx-nn = { path = "../rmlx-nn" }
rmlx-metal = { path = "../rmlx-metal" }
pyo3 = { version = "0.28", features = ["extension-module"] }
