[package]
name = "rmlx-rdma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
rdma = []
test-utils = []

[dependencies]
rmlx-alloc = { path = "../rmlx-alloc" }
rmlx-metal = { path = "../rmlx-metal" }
metal = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
crc32fast = { workspace = true }
half = { workspace = true }
