[package]
name = "rmlx-rdma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
rdma = []
test-utils = []

[dependencies]
rmlx-alloc = { path = "../rmlx-alloc" }
rmlx-metal = { path = "../rmlx-metal" }
objc2 = { workspace = true }
objc2-metal = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
crc32fast = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
crossbeam-utils = { workspace = true }
bytemuck = { workspace = true }
serde_json = { workspace = true }
